Added other events
Co-authored-by: Karthikeya Machiraju <0Shunya0@users.noreply.github.com>
Co-authored-by: gururajrao1 <gururajrao1@users.noreply.github.com>

--- a/templates/Program.html
+++ b/templates/Program.html
@@ -110,14 +110,14 @@
             <div class="row justify-content-center">
                 <div class="col-lg-8">
                     <div class="row">
+
                         <div class="col-lg-6 col-md-6" id="narrativeNexus">
                             <div  class="single_performer wow fadeInUp" data-wow-duration="1s" data-wow-delay=".3s">
                                 <div data-tilt class="thumb">
                                     <img src="static/img/performer/1.png" alt="">
                                 </div>
                                 <div class="performer_heading" >
-                                    <h4>Narrative Nexus (AI Image Generation + Story Writing)
-                                    </h4>
+                                    <h4>Narrative Nexus (AI Image Generation + Story Writing)</h4>
                                     <span>Unleash your creativity by writing a scientific story and bringing it to life with AI-generated images! Immerse yourself in a world of imagination, storytelling, and cutting-edge technology. Join us for an unforgettable experience at our innovative event!
 
                                         <br><br>&#x2022;Number of participants - 300
@@ -127,6 +127,7 @@
                                 </div>
                             </div>
                         </div>
+
                         <div class="col-lg-6 col-md-6" id="Innovate&Automate">
                             <div class="single_performer wow fadeInUp" data-wow-duration="1s" data-wow-delay=".4s">
                                 <div data-tilt class="thumb">
@@ -143,6 +144,7 @@
                                 </div>
                             </div>
                         </div>
+
                         <div class="col-lg-6 col-md-6" id="HackaScratch">
                             <div class="single_performer wow fadeInUp" data-wow-duration="1s" data-wow-delay=".5s">
                                 <div data-tilt class="thumb">
@@ -151,9 +153,6 @@
                                 <div class="performer_heading">
                                     <h4>HackaScratch ( HACKATHON (SCRATCH) )</h4>
                                     <span>Unleash your coding wizardry and creative genius in this high-octane hackathon. Dive into a world of algorithms, logic, and innovation as you race against the clock to develop groundbreaking solutions.
-
-
-
                                         <br><br>&#x2022;Number of participants - 228
                                         <br>&#x2022;Number of teams - 76
                                         <br>&#x2022;Number of people in one team - 3
@@ -161,6 +160,7 @@
                                 </div>
                             </div>
                         </div>
+
                         <div class="col-lg-6 col-md-6" id="Jeopardy">
                             <div  class="single_performer wow fadeInUp" data-wow-duration="1s" data-wow-delay=".6s">
                                 <div  data-tilt class="thumb">
@@ -176,6 +176,7 @@
                                 </div>
                             </div>
                         </div>
+
                         <div class="col-lg-6 col-md-6" id="EnggFuture">
                             <div  class="single_performer wow fadeInUp" data-wow-duration="1s" data-wow-delay=".6s">
                                 <div  data-tilt class="thumb">
@@ -190,6 +191,7 @@
                                 </div>
                             </div>
                         </div>
+
                         <div class="col-lg-6 col-md-6">
                             <div  class="single_performer wow fadeInUp" data-wow-duration="1s" data-wow-delay=".6s">
                                 <div  data-tilt class="thumb">
@@ -204,6 +206,7 @@
                                 </div>
                             </div>
                         </div>
+
                         <div class="col-lg-6 col-md-6">
                             <div  class="single_performer wow fadeInUp" data-wow-duration="1s" data-wow-delay=".6s">
                                 <div  data-tilt class="thumb">
@@ -218,6 +221,7 @@
                                 </div>
                             </div>
                         </div>
+
                         <div class="col-lg-6 col-md-6" id="ScienceSymposium">
                             <div  class="single_performer wow fadeInUp" data-wow-duration="1s" data-wow-delay=".6s">
                                 <div  data-tilt class="thumb">
@@ -232,6 +236,7 @@
                                 </div>
                             </div>
                         </div>
+
                         <div class="col-lg-6 col-md-6" id="RoboChem">
                             <div  class="single_performer wow fadeInUp" data-wow-duration="1s" data-wow-delay=".6s">
                                 <div  data-tilt class="thumb">
@@ -247,6 +252,103 @@
                                 </div>
                             </div>
                         </div>
+                        
+                        <div class="col-lg-6 col-md-6" id="Shark">
+                            <div  class="single_performer wow fadeInUp" data-wow-duration="1s" data-wow-delay=".6s">
+                                <div  data-tilt class="thumb">
+                                    <img src="static/img/performer/10.png" alt="">
+                                </div>
+                                <div class="performer_heading">
+                                    <h4>Shark Tank</h4>
+                                    <span> Description
+
+                                        <br><br>&#x2022;Number of participants - 
+                                        <br>&#x2022;Number of teams - 
+                                        <br>&#x2022;Number of people in one team - </span>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="col-lg-6 col-md-6" id="GOI">
+                            <div  class="single_performer wow fadeInUp" data-wow-duration="1s" data-wow-delay=".6s">
+                                <div  data-tilt class="thumb">
+                                    <img src="static/img/performer/6.png" alt="">
+                                </div>
+                                <div class="performer_heading">
+                                    <h4>Game of Intellects</h4>
+                                    <span> Description
+
+                                        <br><br>&#x2022;Number of participants - 
+                                        <br>&#x2022;Number of teams - 
+                                        <br>&#x2022;Number of people in one team - </span>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="col-lg-6 col-md-6" id="Gizmo">
+                            <div  class="single_performer wow fadeInUp" data-wow-duration="1s" data-wow-delay=".6s">
+                                <div  data-tilt class="thumb">
+                                    <img src="static/img/performer/6.png" alt="">
+                                </div>
+                                <div class="performer_heading">
+                                    <h4>Gizmo Galore</h4>
+                                    <span> Description
+
+                                        <br><br>&#x2022;Number of participants - 
+                                        <br>&#x2022;Number of teams - 
+                                        <br>&#x2022;Number of people in one team - </span>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="col-lg-6 col-md-6" id="Line">
+                            <div  class="single_performer wow fadeInUp" data-wow-duration="1s" data-wow-delay=".6s">
+                                <div  data-tilt class="thumb">
+                                    <img src="static/img/performer/6.png" alt="">
+                                </div>
+                                <div class="performer_heading">
+                                    <h4>Whose Line is it Anyways? Mine...</h4>
+                                    <span> Description
+
+                                        <br><br>&#x2022;Number of participants - 
+                                        <br>&#x2022;Number of teams - 
+                                        <br>&#x2022;Number of people in one team - </span>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="col-lg-6 col-md-6" id="Tale">
+                            <div  class="single_performer wow fadeInUp" data-wow-duration="1s" data-wow-delay=".6s">
+                                <div  data-tilt class="thumb">
+                                    <img src="static/img/performer/6.png" alt="">
+                                </div>
+                                <div class="performer_heading">
+                                    <h4>Tale of Science</h4>
+                                    <span> Description
+
+                                        <br><br>&#x2022;Number of participants - 
+                                        <br>&#x2022;Number of teams - 
+                                        <br>&#x2022;Number of people in one team - </span>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="col-lg-6 col-md-6" id="Cipher">
+                            <div  class="single_performer wow fadeInUp" data-wow-duration="1s" data-wow-delay=".6s">
+                                <div  data-tilt class="thumb">
+                                    <img src="static/img/performer/6.png" alt="">
+                                </div>
+                                <div class="performer_heading">
+                                    <h4>Cipher-Quest</h4>
+                                    <span> Description
+
+                                        <br><br>&#x2022;Number of participants - 
+                                        <br>&#x2022;Number of teams - 
+                                        <br>&#x2022;Number of people in one team - </span>
+                                </div>
+                            </div>
+                        </div>
+
                         <div class="col-lg-6 col-md-6" id="Mono">
                             <div  class="single_performer wow fadeInUp" data-wow-duration="1s" data-wow-delay=".6s">
                                 <div  data-tilt class="thumb">
@@ -262,6 +364,7 @@
                                 </div>
                             </div>
                         </div>
+
                         <div class="col-lg-6 col-md-6" id="Sherlock">
                             <div  class="single_performer wow fadeInUp" data-wow-duration="1s" data-wow-delay=".6s">
                                 <div  data-tilt class="thumb">
@@ -293,13 +396,14 @@
                                 </div>
                             </div>
                         </div>
+
                         <div class="col-lg-6 col-md-6" id="Edge">
                             <div  class="single_performer wow fadeInUp" data-wow-duration="1s" data-wow-delay=".6s">
                                 <div  data-tilt class="thumb">
                                     <img src="static/img/performer/9.png" alt="">
                                 </div>
                                 <div class="performer_heading">
-                                    <h4>Invester's Edge</h4>
+                                    <h4>Investor's Edge</h4>
                                     <span> Description
 
                                         <br><br>&#x2022;Number of participants - 
@@ -308,36 +412,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="col-lg-6 col-md-6" id="Shark">
-                            <div  class="single_performer wow fadeInUp" data-wow-duration="1s" data-wow-delay=".6s">
-                                <div  data-tilt class="thumb">
-                                    <img src="static/img/performer/10.png" alt="">
-                                </div>
-                                <div class="performer_heading">
-                                    <h4>Shark Tank</h4>
-                                    <span> Description
-
-                                        <br><br>&#x2022;Number of participants - 
-                                        <br>&#x2022;Number of teams - 
-                                        <br>&#x2022;Number of people in one team - </span>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-lg-6 col-md-6" id="Stories">
-                            <div  class="single_performer wow fadeInUp" data-wow-duration="1s" data-wow-delay=".6s">
-                                <div  data-tilt class="thumb">
-                                    <img src="static/img/performer/11.png" alt="">
-                                </div>
-                                <div class="performer_heading">
-                                    <h4>House Of Stories</h4>
-                                    <span> Description
-
-                                        <br><br>&#x2022;Number of participants - 
-                                        <br>&#x2022;Number of teams - 
-                                        <br>&#x2022;Number of people in one team - </span>
-                                </div>
-                            </div>
-                        </div>
+                        
                         <div class="col-lg-6 col-md-6" id="Eureka">
                             <div  class="single_performer wow fadeInUp" data-wow-duration="1s" data-wow-delay=".6s">
                                 <div  data-tilt class="thumb">
@@ -352,7 +427,24 @@
                                         <br>&#x2022;Number of people in one team - </span>
                                 </div>
                             </div>
+                        </div>                        
+
+                        <div class="col-lg-6 col-md-6" id="Chamber">
+                            <div  class="single_performer wow fadeInUp" data-wow-duration="1s" data-wow-delay=".6s">
+                                <div  data-tilt class="thumb">
+                                    <img src="static/img/performer/6.png" alt="">
+                                </div>
+                                <div class="performer_heading">
+                                    <h4>Chamber of Reflection</h4>
+                                    <span> Description
+
+                                        <br><br>&#x2022;Number of participants - 
+                                        <br>&#x2022;Number of teams - 
+                                        <br>&#x2022;Number of people in one team - </span>
+                                </div>
+                            </div>
                         </div>
+
                         <div class="col-lg-6 col-md-6" id="Entertainer">
                             <div  class="single_performer wow fadeInUp" data-wow-duration="1s" data-wow-delay=".6s">
                                 <div  data-tilt class="thumb">
@@ -368,8 +460,38 @@
                                 </div>
                             </div>
                         </div>
-                        
 
+                        <div class="col-lg-6 col-md-6" id="Ruins">
+                            <div  class="single_performer wow fadeInUp" data-wow-duration="1s" data-wow-delay=".6s">
+                                <div  data-tilt class="thumb">
+                                    <img src="static/img/performer/6.png" alt="">
+                                </div>
+                                <div class="performer_heading">
+                                    <h4>Ruins to Riches</h4>
+                                    <span> Description
+
+                                        <br><br>&#x2022;Number of participants - 
+                                        <br>&#x2022;Number of teams - 
+                                        <br>&#x2022;Number of people in one team - </span>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="col-lg-6 col-md-6" id="Market">
+                            <div  class="single_performer wow fadeInUp" data-wow-duration="1s" data-wow-delay=".6s">
+                                <div  data-tilt class="thumb">
+                                    <img src="static/img/performer/6.png" alt="">
+                                </div>
+                                <div class="performer_heading">
+                                    <h4>Market Marvels</h4>
+                                    <span> Description
+
+                                        <br><br>&#x2022;Number of participants - 
+                                        <br>&#x2022;Number of teams - 
+                                        <br>&#x2022;Number of people in one team - </span>
+                                </div>
+                            </div>
+                        </div>
 
                     </div>
                 </div>
@@ -377,7 +499,7 @@
         </div>
     </div>
     <!-- events_area_end  -->
-<!-- collaborator- ro03(roshan) -->
+<!-- collaborator- ro03(roshan), 0Shunya0(Karthikeya), haxthehacc(Krishna)-->
 
     <!-- map_area_start  -->
     <div class="map_area">
