Updated events page with desc

--- a/templates/Program.html
+++ b/templates/Program.html
@@ -356,11 +356,10 @@
                                 </div>
                                 <div class="performer_heading">
                                     <h4>Monopoly Madness</h4>
-                                    <span> Description
-
-                                        <br><br>&#x2022;Number of participants - 
-                                        <br>&#x2022;Number of teams - 
-                                        <br>&#x2022;Number of people in one team - </span>
+                                    <span> Feel the thrill in Monopoly Madness: Cash in or crash out!
+                                        <br>
+                                        <br>&#x2022;Number of teams - 100-150
+                                        <br>&#x2022;Number of people in one team - 3-5 per team</span>
                                 </div>
                             </div>
                         </div>
@@ -372,11 +371,10 @@
                                 </div>
                                 <div class="performer_heading">
                                     <h4>Operation Sherlock</h4>
-                                    <span> Description
-
-                                        <br><br>&#x2022;Number of participants - 
-                                        <br>&#x2022;Number of teams - 
-                                        <br>&#x2022;Number of people in one team - </span>
+                                    <span> Running around the campus on a thrilling adventure and racing to uncover the identity and location of a mysterious missing personality. Crack clues ,decipher codes, and solve puzzles to win!
+                                        <br>
+                                        <br>&#x2022;Number of teams - 100-150 teams
+                                        <br>&#x2022;Number of people in one team - 3-5 per team</span>
                                 </div>
                             </div>
                         </div>
@@ -388,11 +386,10 @@
                                 </div>
                                 <div class="performer_heading">
                                     <h4>The Hidden Hand</h4>
-                                    <span> Description
-
-                                        <br><br>&#x2022;Number of participants - 
-                                        <br>&#x2022;Number of teams - 
-                                        <br>&#x2022;Number of people in one team - </span>
+                                    <span> Read between the lines, solve the crime in time - The Hidden Hand awaits, where every move is a game changer.
+                                        <br>
+                                        <br>&#x2022;Number of teams - 100-150 teams
+                                        <br>&#x2022;Number of people in one team - 3-5 per team</span>
                                 </div>
                             </div>
                         </div>
@@ -404,11 +401,11 @@
                                 </div>
                                 <div class="performer_heading">
                                     <h4>Investor's Edge</h4>
-                                    <span> Description
+                                    <span> Welcome to The Investor's Edge – a fun, interactive gamified event that teaches strategic investing, risk management, and the magic of compounding!
 
                                         <br><br>&#x2022;Number of participants - 
-                                        <br>&#x2022;Number of teams - 
-                                        <br>&#x2022;Number of people in one team - </span>
+                                        <br>&#x2022;Number of teams - 50
+                                        <br>&#x2022;Number of people in one team - Solo or 2-4 per team </span>
                                 </div>
                             </div>
                         </div>
@@ -420,7 +417,6 @@
                                 <div class="performer_heading">
                                     <h4>Shark Tank</h4>
                                     <span> Description
-
                                         <br><br>&#x2022;Number of participants - 
                                         <br>&#x2022;Number of teams - 
                                         <br>&#x2022;Number of people in one team - </span>
@@ -435,11 +431,11 @@
                                 </div>
                                 <div class="performer_heading">
                                     <h4>Eureka Expo</h4>
-                                    <span> Description
+                                    <span> Unleash your creativity at Eureka Expo – where innovation meets opportunity!
 
-                                        <br><br>&#x2022;Number of participants - 
-                                        <br>&#x2022;Number of teams - 
-                                        <br>&#x2022;Number of people in one team - </span>
+                                        <br>
+                                        <br>&#x2022;Number of teams - 20-40
+                                        <br>&#x2022;Number of people in one team - 3-5 per team</span>
                                 </div>
                             </div>
                         </div>                        
@@ -451,11 +447,11 @@
                                 </div>
                                 <div class="performer_heading">
                                     <h4>Chamber of Reflection</h4>
-                                    <span> Description
+                                    <span> Enter the "Chamber of Reflection," where shadows whisper secrets, and only the bravest souls emerge as legends, their wisdom forged in trials of enigma.
 
-                                        <br><br>&#x2022;Number of participants - 
-                                        <br>&#x2022;Number of teams - 
-                                        <br>&#x2022;Number of people in one team - </span>
+                                        <br> 
+                                        <br>&#x2022;Number of teams - 150
+                                        <br>&#x2022;Number of people in one team - 3-5 per team </span>
                                 </div>
                             </div>
                         </div>
@@ -467,11 +463,11 @@
                                 </div>
                                 <div class="performer_heading">
                                     <h4>The Entertainer</h4>
-                                    <span> Description
+                                    <span> Step onto the stage and leave the audience awestruck with your wit and speaking prowess. Show off your communication skills, deliver captivating speeches, and let your spontaneity shine as you entertain and engage the crowd.
 
-                                        <br><br>&#x2022;Number of participants - 
-                                        <br>&#x2022;Number of teams - 
-                                        <br>&#x2022;Number of people in one team - </span>
+                                        <br><br>&#x2022;Number of participants - 150
+                                        <br>&#x2022;Number of people in one team (Kiss & Kick) - 1 per team
+                                        <br>&#x2022;Number of people in one team (The impact commentator) - 2-3 per team</span>
                                 </div>
                             </div>
                         </div>
@@ -483,11 +479,11 @@
                                 </div>
                                 <div class="performer_heading">
                                     <h4>Ruins to Riches</h4>
-                                    <span> Description
+                                    <span> Bid, strategize, and rebuild a city in "Ruins to Riches"!
 
-                                        <br><br>&#x2022;Number of participants - 
-                                        <br>&#x2022;Number of teams - 
-                                        <br>&#x2022;Number of people in one team - </span>
+                                        <br>
+                                        <br>&#x2022;Number of teams - 20-25 
+                                        <br>&#x2022;Number of people in one team - 4-5 per team</span>
                                 </div>
                             </div>
                         </div>
@@ -499,11 +495,11 @@
                                 </div>
                                 <div class="performer_heading">
                                     <h4>Market Marvels</h4>
-                                    <span> Description
+                                    <span> Welcome to the Creative Marketing Challenge where innovation meets persuasion across three dynamic rounds! From captivating commercials to compelling debates, showcase your marketing mastery and win for the ultimate title of marketing marvel!
 
-                                        <br><br>&#x2022;Number of participants - 
-                                        <br>&#x2022;Number of teams - 
-                                        <br>&#x2022;Number of people in one team - </span>
+                                        <br>
+                                        <br>&#x2022;Number of teams - 80-100
+                                        <br>&#x2022;Number of people in one team - 3-5</span>
                                 </div>
                             </div>
                         </div>
@@ -514,7 +510,7 @@
         </div>
     </div>
     <!-- events_area_end  -->
-<!-- collaborator- ro03(roshan), 0Shunya0(Karthikeya), haxthehacc(Krishna)-->
+
 
     <!-- map_area_start  -->
     <div class="map_area">
