event images added to program

--- a/templates/Program.html
+++ b/templates/Program.html
@@ -114,7 +114,7 @@
                         <div class="col-lg-6 col-md-6" id="narrativeNexus">
                             <div  class="single_performer wow fadeInUp" data-wow-duration="1s" data-wow-delay=".3s">
                                 <div data-tilt class="thumb">
-                                    <img src="static/img/performer/1.png" alt="">
+                                    <img src="static/img/performer/nexus.png" alt="">
                                 </div>
                                 <div class="performer_heading" >
                                     <h4>Narrative Nexus (AI Image Generation + Story Writing)</h4>
@@ -131,7 +131,7 @@
                         <div class="col-lg-6 col-md-6" id="Innovate&Automate">
                             <div class="single_performer wow fadeInUp" data-wow-duration="1s" data-wow-delay=".4s">
                                 <div data-tilt class="thumb">
-                                    <img src="static/img/performer/2.png" alt="">
+                                    <img src="static/img/performer/INNOVATE.png" alt="">
                                 </div>
                                 <div class="performer_heading">
                                     <h4>Innovate & Automate (ROBOTICS)</h4>
@@ -148,7 +148,7 @@
                         <div class="col-lg-6 col-md-6" id="HackaScratch">
                             <div class="single_performer wow fadeInUp" data-wow-duration="1s" data-wow-delay=".5s">
                                 <div data-tilt class="thumb">
-                                    <img src="static/img/performer/3.png" alt="">
+                                    <img src="static/img/performer/HackaScratch.png" alt="">
                                 </div>
                                 <div class="performer_heading">
                                     <h4>HackaScratch ( HACKATHON (SCRATCH) )</h4>
@@ -195,7 +195,7 @@
                         <div class="col-lg-6 col-md-6">
                             <div class="single_performer wow fadeInUp" data-wow-duration="1s" data-wow-delay=".6s">
                                 <div data-tilt class="thumb">
-                                    <img src="static/img/performer/CARE.png" alt="">
+                                    <img src="static/img/performer/CAR.png" alt="">
                                 </div>
                                 <div class="performer_heading">
                                     <h4>(1)Engineering the Future : Car Edition</h4>
@@ -225,7 +225,7 @@
                         <div class="col-lg-6 col-md-6" id="ScienceSymposium">
                             <div class="single_performer wow fadeInUp" data-wow-duration="1s" data-wow-delay=".6s">
                                 <div data-tilt class="thumb">
-                                    <img src="static/img/performer/1.png" alt="">
+                                    <img src="static/img/performer/carnival.png" alt="">
                                 </div>
                                 <div class="performer_heading">
                                     <h4>Science Carnival - Science Symposium</h4>
@@ -240,10 +240,10 @@
                         <div class="col-lg-6 col-md-6" id="RoboChem">
                             <div class="single_performer wow fadeInUp" data-wow-duration="1s" data-wow-delay=".6s">
                                 <div data-tilt class="thumb">
-                                    <img src="static/img/performer/.png" alt="">
+                                    <img src="static/img/performer/tektoxin.png" alt="">
                                 </div>
                                 <div class="performer_heading">
-                                    <h4>RoboChem Conundrum - ESCAPE ROOM</h4>
+                                    <h4>Tech Toxin</h4>
                                     <span> Put your chemistry knowledge to the test in the RoboChem Conundrum! Solve chemical puzzles, unlock clues, and escape before time runs out in this thrilling escape room experience. Gather your friends, collaborate, and use your chemistry skills to outsmart the room. Can you unravel the mysteries and escape in time?
 
                                         <br><br>&#x2022;Number of participants - 240
@@ -272,7 +272,7 @@
                         <div class="col-lg-6 col-md-6" id="GOI">
                             <div class="single_performer wow fadeInUp" data-wow-duration="1s" data-wow-delay=".6s">
                                 <div data-tilt class="thumb">
-                                    <img src="static/img/performer/3.png" alt="">
+                                    <img src="static/img/performer/GAMEOI.png" alt="">
                                 </div>
                                 <div class="performer_heading">
                                     <h4>Game of Intellects</h4>
@@ -288,7 +288,7 @@
                         <div class="col-lg-6 col-md-6" id="Gizmo">
                             <div class="single_performer wow fadeInUp" data-wow-duration="1s" data-wow-delay=".6s">
                                 <div data-tilt class="thumb">
-                                    <img src="static/img/performer/3.png" alt="">
+                                    <img src="static/img/performer/gizmo.png" alt="">
                                 </div>
                                 <div class="performer_heading">
                                     <h4>Gizmo Galore</h4>
@@ -336,7 +336,7 @@
                         <div class="col-lg-6 col-md-6" id="Cipher">
                             <div class="single_performer wow fadeInUp" data-wow-duration="1s" data-wow-delay=".6s">
                                 <div data-tilt class="thumb">
-                                    <img src="static/img/performer/3.png" alt="">
+                                    <img src="static/img/performer/sherlock.png" alt="">
                                 </div>
                                 <div class="performer_heading">
                                     <h4>Cipher-Quest</h4>
@@ -429,7 +429,7 @@
                         <div class="col-lg-6 col-md-6" id="Chamber">
                             <div class="single_performer wow fadeInUp" data-wow-duration="1s" data-wow-delay=".6s">
                                 <div data-tilt class="thumb">
-                                    <img src="static/img/performer/3.png" alt="">
+                                    <img src="static/img/performer/CHAMBER.png" alt="">
                                 </div>
                                 <div class="performer_heading">
                                     <h4>Chamber of Reflection</h4>
@@ -461,7 +461,7 @@
                         <div class="col-lg-6 col-md-6" id="Ruins">
                             <div class="single_performer wow fadeInUp" data-wow-duration="1s" data-wow-delay=".6s">
                                 <div data-tilt class="thumb">
-                                    <img src="static/img/performer/3.png" alt="">
+                                    <img src="static/img/performer/richesblue.png" alt="">
                                 </div>
                                 <div class="performer_heading">
                                     <h4>Ruins to Riches</h4>
@@ -477,7 +477,7 @@
                         <div class="col-lg-6 col-md-6" id="Market">
                             <div class="single_performer wow fadeInUp" data-wow-duration="1s" data-wow-delay=".6s">
                                 <div data-tilt class="thumb">
-                                    <img src="static/img/performer/3.png" alt="">
+                                    <img src="static/img/performer/marvelblue.png" alt="">
                                 </div>
                                 <div class="performer_heading">
                                     <h4>Market Marvels</h4>
